--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "react-portofolio",
+  "name": "portofolio",
+  "homepage": "https://github.com/omarmmohhammedd/Portoflio.git",
   "version": "0.1.0",
   "private": true,
+  "author": "Omar Mohammed",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@types/node": "18.15.11",
@@ -19,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "sharp": "^0.32.0",
     "typescript": "5.0.3"
   },
   "devDependencies": {
